--- a/Svelte-kit/gainzatron/.prettierrc
+++ b/Svelte-kit/gainzatron/.prettierrc
@@ -1,8 +1,10 @@
 {
 	"useTabs": true,
 	"singleQuote": true,
-	"trailingComma": "none",
+	"trailingComma": "es5",
 	"printWidth": 100,
+	"semi": true,
+	"bracketSpacing": false,
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [
 		{
