--- a/Svelte-kit/gainzatron/package.json
+++ b/Svelte-kit/gainzatron/package.json
@@ -41,5 +41,8 @@
 		"vite": "^7.0.4",
 		"vitest": "^3.2.3",
 		"vitest-browser-svelte": "^0.1.0"
+	},
+	"dependencies": {
+		"zod": "^4.1.5"
 	}
 }
