--- a/Svelte-kit/gainzatron/package.json
+++ b/Svelte-kit/gainzatron/package.json
@@ -40,9 +40,7 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4",
 		"vitest": "^3.2.3",
-		"vitest-browser-svelte": "^0.1.0"
-	},
-	"dependencies": {
+		"vitest-browser-svelte": "^0.1.0",
 		"zod": "^4.1.5"
 	}
 }
