--- a/Svelte-kit/gainzatron/package.json
+++ b/Svelte-kit/gainzatron/package.json
@@ -42,5 +42,8 @@
 		"vitest": "^3.2.3",
 		"vitest-browser-svelte": "^0.1.0",
 		"zod": "^4.1.5"
+	},
+	"dependencies": {
+		"bits-ui": "^2.9.6"
 	}
 }
