--- a/Svelte-kit/Login-page/package.json
+++ b/Svelte-kit/Login-page/package.json
@@ -22,5 +22,10 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"uuid": "^13.0.0",
+		"zod": "^4.1.7",
+		"zod-validation-error": "^4.0.1"
 	}
 }
